[gd_scene load_steps=2 format=3 uid="uid://c8hx63ngl7"]

[ext_resource type="Script" path="res://src/ui/dialogs/SettingsDialog.gd" id="1_ybnpx"]

[node name="SettingsDialog" type="Window"]
title = "Settings"
initial_position = 2
size = Vector2i(500, 400)
transient = true
exclusive = true
script = ExtResource("1_ybnpx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Game Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ThemeSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="VBoxContainer/ThemeSection"]
layout_mode = 2
text = "Theme Settings"
horizontal_alignment = 1

[node name="ThemeLabel" type="Label" parent="VBoxContainer/ThemeSection"]
layout_mode = 2
text = "Visual Theme"

[node name="ThemeOption" type="OptionButton" parent="VBoxContainer/ThemeSection"]
layout_mode = 2

[node name="DisplaySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SectionLabel" type="Label" parent="VBoxContainer/DisplaySection"]
layout_mode = 2
text = "Display Settings"
horizontal_alignment = 1

[node name="ScaleLabel" type="Label" parent="VBoxContainer/DisplaySection"]
layout_mode = 2
text = "UI Scale"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DisplaySection"]
layout_mode = 2

[node name="ScaleSlider" type="HSlider" parent="VBoxContainer/DisplaySection"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.75
max_value = 2.0
step = 0.05
value = 1.0

[node name="ScaleValue" type="Label" parent="VBoxContainer/DisplaySection"]
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="AccessibilitySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="VBoxContainer/AccessibilitySection"]
layout_mode = 2
text = "Accessibility"
horizontal_alignment = 1

[node name="HighContrastCheck" type="CheckBox" parent="VBoxContainer/AccessibilitySection"]
layout_mode = 2
text = "High Contrast Mode"

[node name="ReducedAnimationCheck" type="CheckBox" parent="VBoxContainer/AccessibilitySection"]
layout_mode = 2
text = "Reduced Animation"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Apply"

[node name="ResetButton" type="Button" parent="VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Reset to Defaults"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Close" 